--- a/index.html
+++ b/index.html
@@ -12,22 +12,53 @@
     <p>Computer Science Student | Python Developer | Future Software Engineer</p>
   </header>
 
+  <section class="about">
+    <h2>About Me</h2>
+    <p>Hi, I’m Owaliur Rahman! I’m currently pursuing my Computer Science Engineering degree and working towards becoming a Software Engineer. I'm passionate about full-stack development, coding challenges, and building projects that make a difference.</p>
+  </section>
+
+  <section class="education">
+    <h2>Education</h2>
+    <p><strong>Current Degree:</strong> B.Tech in Computer Science Engineering</p>
+    <p><strong>Institution:</strong> [Your College Name]</p>
+    <p><strong>Year:</strong> 4th Semester</p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Python</li>
+      <li>Java</li>
+      <li>HTML/CSS</li>
+      <li>JavaScript</li>
+      <li>Node.js</li>
+      <li>Django</li>
+      <li>SQL (MySQL, PostgreSQL)</li>
+      <li>Git & GitHub</li>
+    </ul>
+  </section>
+
   <section class="projects">
-    <h2>💻 Projects</h2>
+    <h2>Projects</h2>
     <div class="project">
       <h3>🔐 Premium Password Generator</h3>
-      <p>A Python tool with a GUI to generate strong, random passwords using custom rules.</p>
+      <p>A Python tool that generates strong, random passwords based on custom user settings.</p>
     </div>
     <div class="project">
       <h3>🍽️ Restaurant Menu App</h3>
-      <p>A command-line Python program to view and update a restaurant menu using file handling.</p>
+      <p>A command-line Python program to manage and update a restaurant’s menu items.</p>
+    </div>
+    <div class="project">
+      <h3>💼 Full-Stack Portfolio</h3>
+      <p>Created this portfolio website using HTML, CSS, and GitHub Pages.</p>
     </div>
   </section>
 
   <section class="contact">
-    <h2>📬 Contact Me</h2>
+    <h2>Contact Me</h2>
     <p>Email: <a href="mailto:owaliur.email@example.com">owaliur.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/owaliurrahman" target="_blank">My LinkedIn</a></p>
+    <p>GitHub: <a href="https://github.com/owaliurrahman" target="_blank">My GitHub</a></p>
   </section>
 
   <footer>
